erDiagram
    USUARIO ||--o{ OFERTA : "crea / aprueba"
    USUARIO ||--o{ TRAMO : "es responsable"
    USUARIO ||--o{ NOTIFICACION : "recibe"
    USUARIO ||--o{ ADJUNTO : "sube"
    USUARIO ||--o{ REASIGNACION : "participa"

    OFERTA ||--|{ TRAMO : "se divide en"
    OFERTA ||--o{ NOTIFICACION : "genera"

    TRAMO ||--|{ TAREA : "agrupa"
    TRAMO ||--o{ ADJUNTO : "contiene"
    TRAMO ||--o{ REASIGNACION : "registra"
    TRAMO ||--o{ NOTIFICACION : "genera"

    FESTIVO {
        date fecha PK
        varchar descripcion
    }

    USUARIO {
        serial id PK
        varchar nombre
        varchar email UK
        enum rol
        varchar password_hash
        boolean activo
    }

    OFERTA {
        serial id PK
        varchar cliente
        enum tamano
        date fecha_inicio
        smallint plazo_total_dias
        date fecha_entrega_comprometida
        date fecha_finalizacion_real
        date fecha_aprob_unidad
        int aprobado_por FK
        smallint dias_correccion
        smallint desviacion_dias
        numeric indicador_cumplimiento
        enum estado
        int creado_por FK
    }

    TRAMO {
        serial id PK
        int oferta_id FK
        smallint numero
        int responsable_id FK
        int reasignado_de FK
        smallint duracion_asignada_dias
        date fecha_activacion
        date fecha_limite
        date fecha_entrega_real
        smallint dias_habiles_usados
        smallint desviacion_dias
        numeric indicador_cumplimiento
        enum estado
    }

    TAREA {
        serial id PK
        int tramo_id FK
        enum tipo
        varchar descripcion
        enum estado
        timestamp completada_en
    }

    ADJUNTO {
        serial id PK
        int tramo_id FK
        varchar tipo
        varchar nombre
        varchar ruta
        int subido_por FK
    }

    REASIGNACION {
        serial id PK
        int tramo_id FK
        int de_usuario_id FK
        int a_usuario_id FK
        varchar motivo
        timestamp fecha
    }

    NOTIFICACION {
        serial id PK
        int usuario_id FK
        int oferta_id FK
        int tramo_id FK
        enum tipo
        varchar mensaje
        boolean leida
    }
